--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,3 @@
-VITE_API_URL=http://localhost:3001
+VITE_API_URL=https://puzzle-project-bluestock.onrender.com
 VITE_PUZZLE_SECRET=bluestock-puzzle-secret-2026
 VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
